# SpellTracker

./: .gitignore  CMakeLists.txt  Check.cpp  Check.h  Item.cpp  Item.h  ItemPickerDialog.cpp  ItemPickerDialog.h  ItemTracker.cpp  ItemTracker.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  Slot.cpp  Slot.h  SpellTracker_en_US.ts  SubzoneGroupBox.cpp  SubzoneGroupBox.h  ZoneGroupBox.cpp  ZoneGroupBox.h  main.cpp
lang/: SpellTracker_en_US.ts
resources/gamedata/: OOT_Randomizer.xml
src/: IconSet.cpp  IconSet.h  Item.cpp  Item.h  main.cpp
src/models/: ItemLayoutModel.cpp  ItemLayoutModel.h  ItemLayoutObject.cpp  ItemLayoutObject.h
src/views/: ItemTrackerView.cpp  ItemTrackerView.h
src/widgets/: ItemTrackerIcon.cpp  ItemTrackerIcon.h
src/windows/: ItemPickerDialog.cpp  ItemPickerDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  StreamerPopoutWindow.cpp  StreamerPopoutWindow.h
